0.4.2 - Released with KDE 4.2.4
------------------------------------------------------------------------
- Updated to libraw 0.6.14: user-specified gamma curve.
                            Pentax K2000/Km support.
                            Changes in Canon sRAW processing (support for 5D2 fw 1.07).

0.4.1 - Released with KDE 4.2.1
------------------------------------------------------------------------
- Updated to libraw 0.6.13: Bugfixes in RIFF reading code.
- Updated to libraw 0.6.12: Hasselblad V96C support.

0.4.0 - Released with KDE 4.2.0
------------------------------------------------------------------------
- Updated to libraw 0.6.11: Fixed serious bug in loading metadata from external JPG file.
- Updated to libraw 0.6.10: Support for loading White Balance data from Sony ARW files edited with Sony IDC software.
- Updated to libraw 0.6.9 : Better support for Samsung S85.
                            Fixed possible integer overflow in wavelet denoising code.
- Updated to libraw 0.6.8 : changes in QuickTake 100 files processing.                                        
- Updated to libraw 0.6.7 : Added support for Samsung S85.                                        
                            Changes in external jpeg (metadata) processing.
- Updated to LibRaw 0.6.6 : Changes in Panasonic FZ50 files processing.
- Updated to LibRaw 0.6.5 : Fixed file descriptor and buffer memory leak when thumbnail extractor is called, 
                            but library object is not properly initialized.
                            Fixes in Imacon files unpacking.
                            Fixes in Hasselblad .fff files unpacking.
- Updated to LibRaw 0.6.3 : NEF processing code changed (some overflow control added).
- Updated to LibRaw 0.6.2.
- New cameras: Canon G10 & 5D Mk2, Leaf AFi 7, Leica D-LUX4,              
               Panasonic FX150 & G 1, Fujifilm IS Pro.
- Updated to LibRaw 0.6.1.