@@ -1,5 +1,11 @@
 0.4.2 - Released with KDE 4.2.4
 ------------------------------------------------------------------------
+
+- Updated to libraw 0.6.15: more accurate pentax dSLR support.
+                            fixes in Kodak 620x/720x identification.
+                            faster identification procedure for some formats.
+                            Fixed bug in custom gamma curve creation.
+
 - Updated to libraw 0.6.14: user-specified gamma curve.
                             Pentax K2000/Km support.
                             Changes in Canon sRAW processing (support for 5D2 fw 1.07).
